feat: add book module
